refactor: Fix generic type inference in ExchangePayloadProxy