@@ -4,7 +4,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.milesight.beaveriot.base.utils.JsonUtils;
 import com.milesight.beaveriot.context.integration.entity.annotation.AnnotationEntityCache;
 import com.milesight.beaveriot.context.integration.model.ExchangePayload;
-import lombok.SneakyThrows;
+import lombok.*;
 import org.aopalliance.intercept.MethodInterceptor;
 import org.springframework.aop.framework.ProxyFactory;
 import org.springframework.util.ObjectUtils;
@@ -15,32 +15,33 @@ import java.util.Map;
 /**
  * @author leon
  */
-public class MapExchangePayloadProxy {
-    private final Class<? extends ExchangePayload> parameterTypes;
-    private final Map<String,?> allPayloads;
+public class MapExchangePayloadProxy<T extends ExchangePayload> {
+    private final Class<T> parameterType;
+    private final Map<String, ?> allPayloads;
 
-    public MapExchangePayloadProxy(Map<String, ?> allPayloads, Class<? extends ExchangePayload> parameterTypes) {
+    public <P> MapExchangePayloadProxy(Map<String, P> allPayloads, Class<T> parameterType) {
         this.allPayloads = allPayloads;
-        this.parameterTypes = parameterTypes;
+        this.parameterType = parameterType;
     }
 
-    public ExchangePayload proxy() {
+    public T proxy() {
         ProxyFactory factory = new ProxyFactory();
-        factory.setTarget(newInstance(parameterTypes));
+        factory.setTarget(newInstance(parameterType));
         factory.addAdvice((MethodInterceptor) invocation -> {
             Method method = invocation.getMethod();
             if ("toString".equals(method.getName())) {
                 return allPayloads.toString();
-            }else if("hashCode".equals(method.getName()) || "equals".equals(method.getName())){
+            } else if ("hashCode".equals(method.getName()) || "equals".equals(method.getName())) {
                 return invocation.proceed();
             }
             String cacheEntityKey = AnnotationEntityCache.INSTANCE.getEntityKeyByMethod(method);
-            if(allPayloads.containsKey(cacheEntityKey)){
+            if (allPayloads.containsKey(cacheEntityKey)) {
                 return parserValue(allPayloads.get(cacheEntityKey), method.getReturnType());
             }
             return invocation.proceed();
         });
-        return (ExchangePayload) factory.getProxy();
+        //noinspection unchecked
+        return (T) factory.getProxy();
     }
 
     protected Object parserValue(Object value, Class<?> returnType) {
@@ -51,8 +52,7 @@ public class MapExchangePayloadProxy {
     }
 
     @SneakyThrows
-    protected Object newInstance(Class<? extends ExchangePayload> parameterTypes) {
-        ExchangePayload newInstance = parameterTypes.newInstance();
-        return newInstance;
+    protected T newInstance(Class<T> parameterType) {
+        return parameterType.getDeclaredConstructor().newInstance();
     }
 }
